# gec-t5

./: LICENSE  README.md  dataset.py  generate.py  pyproject.toml  requirements.txt  train.py
src/gec_t5/: __init__.py  dataset.py  generate.py  retokenize.py
src/gec_t5/cli/: generate.py  retokenize.py
