[project]
name = "gec-t5"
version = "0.1.0"
description = "Code for training and inference of T5-based Grammatical Error Correction models with cLang-8."
readme = "README.md"
authors = [
    { name = "gotuiyan"}
]
requires-python = ">=3.11.0"
dependencies = [
    "accelerate>=1.4.0",
    "torch>=2.6.0",
    "transformers==4.51.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gec-t5-generate = "gec_t5.cli.generate:cli_main"
gec-t5-retokenize = "gec_t5.cli.retokenize:cli_main"
